crates/rolldown/tests/rolldown/errors/invalid_export_mode/should_not_be_none/main.js
export function should_not_be_default() {
  return 'should not be default';
}